--- a/index.html
+++ b/index.html
@@ -2,11 +2,103 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My Demo Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Audio Demo Page</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            background-color: #f4f4f4;
+        }
+        h1 {
+            text-align: center;
+            color: #333;
+        }
+        .audio-container {
+            margin: 20px 0;
+            padding: 10px;
+            background-color: #fff;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        audio {
+            width: 100%;
+            margin-top: 10px;
+        }
+        p {
+            color: #555;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to My Demo Page</h1>
-    <p>This is a simple GitHub Pages demo.</p>
+    <div class="text-center">
+        <h1>Sing2Song: An Accompaniment Generation System Based on Solo Singing</h1>
+        <p class="fst-italic mb-0"> 
+            Choi Sen Ho
+            <sup>1</sup>
+            <sup>*</sup>
+            , Chap Issac Fung
+            <sup>1</sup>
+            <sup>*</sup>
+            , Huicheng Zhang
+            <sup>1</sup>
+            <sup>*</sup>
+            , Yulun Wu
+            <sup>2</sup>
+            <sup>*</sup>
+            ,
+            <br>
+            Yueqiao Zhang
+            <sup>1</sup>
+            , Zhili Tan
+            <sup>1</sup>
+            , Qiuqiang Kong
+            <sup>2</sup>
+            , Lui Siu Hang
+            <sup>1</sup>
+            , Yaolong Jv
+            <sup>3</sup>
+            <sup>#</sup>
+        </p>
+        <p> In this paper, we propose an enhanced pipeline addressing three key challenges: 
+            (1) robust processing of vocal inputs with performance variations, 
+            (2) generation of musically coherent long-form accompaniments, and 
+            (3) professional-grade audio rendering with style-aware mixing. 
+            Our framework acts as a mixing role of improvisational accompanist, 
+            composer, and audio engineer, integrating arobust MIR system to track beats, 
+            pitches, and musical sections of solo singing, a knowledge-enhanced MIDI 
+            generator that combines music theory rules with style-specific improvisation patterns, and an
+            adaptive audio synthesis engine that emulates professional mixing
+            decisions. This pipeline enables studio-quality musical productions
+            from users' singing while preserving their unique expressive characteristics, 
+            represents a significant step toward personalized music
+            generation with no input length limitation. We demonstrate the effectiveness 
+            of our system through qualitative and quantitative evaluations, 
+            showing superior alignment, expressiveness, and stylistic
+            consistency compared to state-of-the-art baselines.</p>
+
+    </div>
+    
+    <div class="audio-container">
+        <h3>Sample Audio 1</h3>
+        <p>Description of the first audio file.</p>
+        <audio controls>
+            <source src="audio/sample1.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
+    </div>
+
+    <div class="audio-container">
+        <h3>Sample Audio 2</h3>
+        <p>Description of the second audio file.</p>
+        <audio controls>
+            <source src="audio/sample2.wav" type="audio/wav">
+            Your browser does not support the audio element.
+        </audio>
+    </div>
+
+    <p>Visit the <a href="https://github.com/your-username/your-repo">GitHub repository</a> for more details about this project.</p>
 </body>
 </html>
