--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Audio Demo Page</title>
     <style>
         body {
@@ -12,10 +13,10 @@
             padding: 20px;
             background-color: #f4f4f4;
         }
-        h1 {
+        /* h1 {
             text-align: center;
             color: #333;
-        }
+        } */
         .audio-container {
             margin: 20px 0;
             padding: 10px;
@@ -33,8 +34,9 @@
     </style>
 </head>
 <body>
+    <div class="container pt-5 mt-5 shadow p-5 mb-5 bg-white rounded">
     <div class="text-center">
-        <h1>Sing2Song: An Accompaniment Generation System Based on Solo Singing</h1>
+        <h1><tt>Sing2Song</tt>: An Accompaniment Generation System Based on Solo Singing</h1>
         <p class="fst-italic mb-0"> 
             Choi Sen Ho
             <sup>1</sup>
@@ -62,24 +64,35 @@
             <sup>3</sup>
             <sup>#</sup>
         </p>
-        <p> In this paper, we propose an enhanced pipeline addressing three key challenges: 
-            (1) robust processing of vocal inputs with performance variations, 
-            (2) generation of musically coherent long-form accompaniments, and 
-            (3) professional-grade audio rendering with style-aware mixing. 
-            Our framework acts as a mixing role of improvisational accompanist, 
-            composer, and audio engineer, integrating arobust MIR system to track beats, 
-            pitches, and musical sections of solo singing, a knowledge-enhanced MIDI 
-            generator that combines music theory rules with style-specific improvisation patterns, and an
-            adaptive audio synthesis engine that emulates professional mixing
-            decisions. This pipeline enables studio-quality musical productions
-            from users' singing while preserving their unique expressive characteristics, 
-            represents a significant step toward personalized music
-            generation with no input length limitation. We demonstrate the effectiveness 
-            of our system through qualitative and quantitative evaluations, 
-            showing superior alignment, expressiveness, and stylistic
-            consistency compared to state-of-the-art baselines.</p>
-
+        <p>
+            <sup>1</sup> The Central Media Technology Institute, Huawei, China
+            , <sup>2</sup> The Chinese University of Hong Kong, Hong Kong SAR, China
+            , <sup>3</sup> Great Bay University, Dongguan, China
+            <!-- , <sup>*</sup> Equal Contribution
+            , <sup>#</sup> Corresponding Author -->
+        </p>
     </div>
+    
+    <h1>
+    Project Overview:
+    </h1>
+    <p> In this project, we propose an enhanced pipeline addressing three key challenges: 
+    (1) robust processing of vocal inputs with performance variations, 
+    (2) generation of musically coherent long-form accompaniments, and 
+    (3) professional-grade audio rendering with style-aware mixing. 
+    Our framework acts as a mixing role of improvisational accompanist, 
+    composer, and audio engineer, integrating arobust MIR system to track beats, 
+    pitches, and musical sections of solo singing, a knowledge-enhanced MIDI 
+    generator that combines music theory rules with style-specific improvisation patterns, and an
+    adaptive audio synthesis engine that emulates professional mixing
+    decisions. This pipeline enables studio-quality musical productions
+    from users' singing while preserving their unique expressive characteristics, 
+    represents a significant step toward personalized music
+    generation with no input length limitation. We demonstrate the effectiveness 
+    of our system through qualitative and quantitative evaluations, 
+    showing superior alignment, expressiveness, and stylistic
+    consistency compared to state-of-the-art baselines.</p>
+    <img src="figures/sing2song.jpeg" alt="Pipeline Diagram" style="width:100%; height:auto;">
     
     <div class="audio-container">
         <h3>Sample Audio 1</h3>
