refactor: refine overview appearance

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
             padding: 20px;
             background-color: #f4f4f4;
         }
+        .container{
+            overflow-x: auto;
+        }
         /* h1 {
             text-align: center;
             color: #333;
@@ -66,10 +69,10 @@
         </p>
         <p>
             <sup>1</sup> The Central Media Technology Institute, Huawei, China
-            , <sup>2</sup> The Chinese University of Hong Kong, Hong Kong SAR, China
-            , <sup>3</sup> Great Bay University, Dongguan, China
-            <!-- , <sup>*</sup> Equal Contribution
-            , <sup>#</sup> Corresponding Author -->
+            , <br> <sup>2</sup> The Chinese University of Hong Kong, Hong Kong SAR, China
+            , <br> <sup>3</sup> Great Bay University, Dongguan, China
+            , <br> <sup>*</sup> Equal Contribution
+            , <sup>#</sup> Corresponding Author
         </p>
     </div>
     
