refactor: font fix

--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
             font-family: Georgia, "Times New Roman", serif;
             font-size: 1.15rem; /* Increase as needed */
         }
+        ul {
+            color: #555;
+            font-family: Georgia, "Times New Roman", serif;
+            font-size: 1.15rem; /* Increase as needed */
+        }
         td {
             text-align: center;
             vertical-align: middle;
