refactor: description fix

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     <div class="container pt-5 mt-5 shadow p-5 mb-5 bg-white rounded">
         <h2>Amateur Singing Vocal Input Examples</h2>
         <p>
-            Our system delivers precise Music Information Retrieval (MIR) on studio-quality vocal recordings and generates professional-grade MIDI accompaniments, ensuring high fidelity and musical coherence.
+            Our system effectively handles amateur singing inputs with performance variations, generating musically coherent accompaniments that enhance the overall listening experience.
         </p>
         <table align="center">
             <tbody>
