refactor: application of audio to webpage

--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
             font-family: Georgia, "Times New Roman", serif;
             font-size: 1.15rem; /* Increase as needed */
         }
+        h2 {
+            font-family: Georgia, 'Times New Roman', Times, serif;
+            font-size: 2rem;
+        }
         td {
             text-align: center;
             vertical-align: middle;
@@ -87,9 +91,9 @@
             </p>
         </div>
         
-        <h1>
+        <h2>
         Project Overview:
-        </h1>
+        </h2>
         <div class="mb-4">
             <p>
                 In this project, we propose an enhanced pipeline addressing three key challenges:
@@ -133,34 +137,34 @@
                 <tr bgcolor="#3bbeff">
                     <td>
                         <audio controls>
-                            <source src="audio/studio_input.wav" type="audio/wav">
+                            <source src="audio/sing2song_full/classic_ballad/final_train_The Districts - Vermont_vocals_classic_ballad_20250908_1812_35175190.wav" type="audio/wav">
                             Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls>
-                            <source src="audio/studio_midi.wav" type="audio/wav">
+                            <source src="audio/sing2song_full/classic_ballad/final_train_Strand Of Oaks - Spacestation_vocals_classic_ballad_20250908_1805_53658262.wav" type="audio/wav">
                             Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls>
-                            <source src="audio/studio_output.wav" type="audio/wav">
+                            <source src="audio/sing2song_full/classic_ballad/final_train_Steven Clark - Bounty_vocals_classic_ballad_20250908_1803_25900370.wav" type="audio/wav">
                             Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls>
-                            <source src="audio/studio_output.wav" type="audio/wav">
+                            <source src="audio/sing2song_full/classic_ballad/final_train_Snowmine - Curfews_vocals_classic_ballad_20250908_1759_35746257.wav" type="audio/wav">
                             Your browser does not support the audio element.
                         </audio>
                     </td>
                 </tr>
                 <tr>
-                    <td>Name1<br>Artist1</td>
-                    <td>Name2<br>Artist2</td>
-                    <td>Name3<br>Artist3</td>
-                    <td>Name4<br>Artist4</td>
+                    <td>Vermont<br>The Districts</td>
+                    <td>Spacestation<br>Strand Of Oaks</td>
+                    <td>Bounty<br>Steven Clark</td>
+                    <td>Curfews<br>Snowmine</td>
                 </tr>
         </table>
     </div>
@@ -175,34 +179,34 @@
                 <tr bgcolor="#3bbeff">
                     <td>
                         <audio controls>
-                            <source src="audio/studio_input.wav" type="audio/wav">
+                            <source src="audio/sing2song_amateur_good_output/final_Yaolong_Around_The_Winter_livehouse_20250915_1548_28847891.wav" type="audio/wav">
                             Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls>
-                            <source src="audio/studio_midi.wav" type="audio/wav">
+                            <source src="audio/sing2song_amateur_good_output/final_84364501_---------_livehouse_20250915_1546_09267969.wav" type="audio/wav">
                             Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls>
-                            <source src="audio/studio_output.wav" type="audio/wav">
+                            <source src="audio/sing2song_amateur_good_output/songAgent_wav_mix_1758247695764_of_rec_1758247628640.wav" type="audio/wav">
                             Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls>
-                            <source src="audio/studio_output.wav" type="audio/wav">
+                            <source src="audio/sing2song_amateur_good_output/songAgent_wav_mix_1758351990050_of_rec_1758351877698.wav" type="audio/wav">
                             Your browser does not support the audio element.
                         </audio>
                     </td>
                 </tr>
                 <tr>
-                    <td>Name1<br>Artist1</td>
-                    <td>Name2<br>Artist2</td>
-                    <td>Name3<br>Artist3</td>
-                    <td>Name4<br>Artist4</td>
+                    <td>Around the Winter<br>大约在冬季</td>
+                    <td>Tales of the Red Cliff<br>醉赤壁</td>
+                    <td>Flower in a Mirror<br>镜中花</td>
+                    <td>Still in Love with You<br>依然爱你</td>
                 </tr>
         </table>
     </div>
@@ -220,25 +224,25 @@
                     </td>
                     <td>
                         <audio controls>
-                            <source src="audio/studio_input.wav" type="audio/wav">
+                            <source src="audio/sing2song_full/classic_ballad/final_train_Clara Berry And Wooldog - Air Traffic_vocals_classic_ballad_20250908_1724_45980163.wav" type="audio/wav">
                             Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls>
-                            <source src="audio/studio_midi.wav" type="audio/wav">
+                            <source src="audio/sing2song_full/classic_ballad/final_train_Grants - PunchDrunk_vocals_classic_ballad_20250908_1730_16752842.wav" type="audio/wav">
                             Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls>
-                            <source src="audio/studio_output.wav" type="audio/wav">
+                            <source src="audio/sing2song_full/classic_ballad/final_train_Meaxic - Take A Step_vocals_classic_ballad_20250908_1737_55038426.wav" type="audio/wav">
                             Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls>
-                            <source src="audio/studio_output.wav" type="audio/wav">
+                            <source src="audio/sing2song_full/classic_ballad/final_train_Night Panther - Fire_vocals_classic_ballad_20250908_1747_30558147.wav" type="audio/wav">
                             Your browser does not support the audio element.
                         </audio>
                     </td>
@@ -249,25 +253,25 @@
                     </td>
                     <td>
                         <audio controls>
-                            <source src="audio/studio_input.wav" type="audio/wav">
+                            <source src="audio/sing2song_full/livehouse_rnb/final_train_Clara Berry And Wooldog - Air Traffic_vocals_livehouse_20250908_1720_45122959.wav" type="audio/wav">
                             Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls>
-                            <source src="audio/studio_midi.wav" type="audio/wav">
+                            <source src="audio/sing2song_full/livehouse_rnb/final_train_Grants - PunchDrunk_vocals_livehouse_20250908_1726_22384071.wav" type="audio/wav">
                             Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls>
-                            <source src="audio/studio_output.wav" type="audio/wav">
+                            <source src="audio/sing2song_full/livehouse_rnb/final_train_Meaxic - Take A Step_vocals_livehouse_20250908_1733_15485582.wav" type="audio/wav">
                             Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls>
-                            <source src="audio/studio_output.wav" type="audio/wav">
+                            <source src="audio/sing2song_full/livehouse_rnb/final_train_Night Panther - Fire_vocals_livehouse_20250908_1744_08990498.wav" type="audio/wav">
                             Your browser does not support the audio element.
                         </audio>
                     </td>
@@ -278,54 +282,25 @@
                     </td>
                     <td>
                         <audio controls>
-                            <source src="audio/studio_input.wav" type="audio/wav">
+                            <source src="audio/sing2song_full/livehouse_funk/final_train_Clara Berry And Wooldog - Air Traffic_vocals_livehouse_20250908_1727_25094552.wav" type="audio/wav">
                             Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls>
-                            <source src="audio/studio_midi.wav" type="audio/wav">
+                            <source src="audio/sing2song_full/livehouse_funk/final_train_Grants - PunchDrunk_vocals_livehouse_20250908_1732_07549156.wav" type="audio/wav">
                             Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls>
-                            <source src="audio/studio_output.wav" type="audio/wav">
+                            <source src="audio/sing2song_full/livehouse_funk/final_train_Meaxic - Take A Step_vocals_livehouse_20250908_1740_22573442.wav" type="audio/wav">
                             Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls>
-                            <source src="audio/studio_output.wav" type="audio/wav">
-                            Your browser does not support the audio element.
-                        </audio>
-                    </td>
-                </tr>
-                <tr bgcolor="#3bbeff">
-                    <td>
-                        <font color="#000000">Ballad</font>
-                    </td>
-                    <td>
-                        <audio controls>
-                            <source src="audio/studio_input.wav" type="audio/wav">
-                            Your browser does not support the audio element.
-                        </audio>
-                    </td>
-                    <td>
-                        <audio controls>
-                            <source src="audio/studio_midi.wav" type="audio/wav">
-                            Your browser does not support the audio element.
-                        </audio>
-                    </td>
-                    <td>
-                        <audio controls>
-                            <source src="audio/studio_output.wav" type="audio/wav">
-                            Your browser does not support the audio element.
-                        </audio>
-                    </td>
-                    <td>
-                        <audio controls>
-                            <source src="audio/studio_output.wav" type="audio/wav">
+                            <source src="audio/sing2song_full/livehouse_funk/final_train_Night Panther - Fire_vocals_livehouse_20250908_1754_22523424.wav" type="audio/wav">
                             Your browser does not support the audio element.
                         </audio>
                     </td>
@@ -336,25 +311,25 @@
                     </td>
                     <td>
                         <audio controls>
-                            <source src="audio/studio_input.wav" type="audio/wav">
+                            <source src="audio/sing2song_full/traditional_chinese/final_train_Clara Berry And Wooldog - Air Traffic_vocals_traditional_chinese_20250908_1728_20356669.wav" type="audio/wav">
                             Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls>
-                            <source src="audio/studio_midi.wav" type="audio/wav">
+                            <source src="audio/sing2song_full/traditional_chinese/final_train_Grants - PunchDrunk_vocals_traditional_chinese_20250908_1735_07923862.wav" type="audio/wav">
                             Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls>
-                            <source src="audio/studio_output.wav" type="audio/wav">
+                            <source src="audio/sing2song_full/traditional_chinese/final_train_Meaxic - Take A Step_vocals_traditional_chinese_20250908_1742_17093602.wav" type="audio/wav">
                             Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls>
-                            <source src="audio/studio_output.wav" type="audio/wav">
+                            <source src="audio/sing2song_full/traditional_chinese/final_train_Night Panther - Fire_vocals_traditional_chinese_20250908_1754_21294201.wav" type="audio/wav">
                             Your browser does not support the audio element.
                         </audio>
                     </td>
@@ -365,38 +340,38 @@
                     </td>
                     <td>
                         <audio controls>
-                            <source src="audio/studio_input.wav" type="audio/wav">
+                            <source src="audio/sing2song_full/livehouse_dj/final_train_Clara Berry And Wooldog - Air Traffic_vocals_livehouse_20250908_1718_39901638.wav" type="audio/wav">
                             Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls>
-                            <source src="audio/studio_midi.wav" type="audio/wav">
+                            <source src="audio/sing2song_full/livehouse_dj/final_train_Grants - PunchDrunk_vocals_livehouse_20250908_1725_08459628.wav" type="audio/wav">
                             Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls>
-                            <source src="audio/studio_output.wav" type="audio/wav">
+                            <source src="audio/sing2song_full/livehouse_dj/final_train_Meaxic - Take A Step_vocals_livehouse_20250908_1732_53237527.wav" type="audio/wav">
                             Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls>
-                            <source src="audio/studio_output.wav" type="audio/wav">
+                            <source src="audio/sing2song_full/livehouse_dj/final_train_Night Panther - Fire_vocals_livehouse_20250908_1743_42440359.wav" type="audio/wav">
                             Your browser does not support the audio element.
                         </audio>
                     </td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td>Name1<br>Artist1</td>
-                    <td>Name2<br>Artist2</td>
-                    <td>Name3<br>Artist3</td>
-                    <td>Name4<br>Artist4</td>
+                    <td>Air Traffic<br>Clara Berry And Wooldog</td>
+                    <td>PunchDruck<br>Grants</td>
+                    <td>Take a Step<br>Meaxic</td>
+                    <td>Fire<br>Night Panther</td>
                 </tr>
         </table>
     </div>
-    <p>Visit the <a href="https://github.com/your-username/your-repo">GitHub repository</a> for more details about this project.</p>
+    <p align="center">Visit the <a href="https://github.com/your-username/your-repo">GitHub repository</a> for more details about this project.</p>
 </body>
 </html>
