add: dizi solo piece name

--- a/index.html
+++ b/index.html
@@ -864,7 +864,7 @@
                 <tr>
                     <td>Title<br>Title in Chinese</td>
                     <td>Sky<br>海阔天空</td>
-                    <td>Dizi Solo<sub><small><i>*Instrumental</i></small></sub><br>笛子独奏</td>
+                    <td>Dizi Solo: Trip to Gusu<sub><small><i>*Instrumental</i></small></sub><br>笛子独奏：姑苏行</td>
                     <td>Not a Hero<br>不谓侠</td>
                 </tr>
         </table>
