--- a/index.html
+++ b/index.html
@@ -296,19 +296,19 @@
                     </td>
                     <td>
                         <audio controls>
-                            <source src="audio/sing2song_full/livehouse_dj/final_train_Grants - PunchDrunk_vocals_livehouse_20250908_1725_08459628.wav" type="audio/wav">
+                            <source src="audio/dj/final_vocals_livehouse_20251014_1416_01203087_PunchDrunk.wav" type="audio/wav">
                             Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls>
-                            <source src="audio/sing2song_full/livehouse_dj/final_train_Meaxic - Take A Step_vocals_livehouse_20250908_1732_53237527.wav" type="audio/wav">
+                            <source src="audio/dj/final_vocals(1)_livehouse_20251014_1418_38293585_TakeAStep.wav" type="audio/wav">
                             Your browser does not support the audio element.
                         </audio>
                     </td>
                     <td>
                         <audio controls>
-                            <source src="audio/sing2song_full/livehouse_dj/final_train_Night Panther - Fire_vocals_livehouse_20250908_1743_42440359.wav" type="audio/wav">
+                            <source src="audio/dj/final_vocals(2)_livehouse_20251014_1420_46396887_Fire.wav" type="audio/wav">
                             Your browser does not support the audio element.
                         </audio>
                     </td>
